ctrlcode/gimbalboard/gimbctrl/build/gimbctrl/unify_builder.log
[2022-07-29 20:32:38]	[done]
	build successfully !

[2022-07-29 20:34:11]	[done]
	build successfully !

[2022-07-29 20:36:46]	[done]
	build successfully !

[2022-07-29 20:37:12]	[done]
	build successfully !

[2022-07-29 20:37:58]	[done]
	build successfully !

[2022-07-29 20:40:17]	[done]
	build successfully !

[2022-07-29 20:40:43]	[done]
	build successfully !

[2022-07-29 20:40:49]	[done]
	build successfully !

[2022-07-29 20:42:14]	[done]
	build successfully !

[2022-07-29 20:42:48]	[done]
	build successfully !

[2022-07-29 20:43:43]	[done]
	build successfully !

[2022-07-29 20:44:26]	[done]
	build successfully !

[2022-07-29 20:45:42]	[done]
	build successfully !

[2022-07-29 20:45:52]	[done]
	build successfully !

[2022-07-29 20:46:12]	[done]
	build successfully !

[2022-07-29 21:18:04]	compilation failed at : "e:\MXI4\ctrlcode\gimbalboard\gimbctrl\src\devices\canbus.c", exit code: 1
   at unify_builder.Program.Main(String[] args_)
---
./src/devices/canbus.c: In function 'HAL_CAN_RxFifo0MsgPendingCallback':
./src/devices/canbus.c:26:13: error: duplicate case value
   26 |             case trigmotid:
      |             ^~~~
./src/devices/canbus.c:14:13: note: previously used here
   14 |             case fricmotid_1:
      |             ^~~~

[2022-07-29 21:23:47]	[done]
	build successfully !

[2022-07-29 21:24:48]	[done]
	build successfully !

[2022-07-29 21:28:23]	[done]
	build successfully !

[2022-07-29 21:28:37]	[done]
	build successfully !

[2022-07-29 21:29:51]	[done]
	build successfully !

[2022-07-29 21:33:31]	[done]
	build successfully !

[2022-07-29 22:13:54]	[done]
	build successfully !

[2022-07-29 22:20:29]	[done]
	build successfully !

[2022-07-29 22:23:20]	[done]
	build successfully !

